[package]
name = "bevy_meshem"
version = "0.5.0"
edition = "2021"
authors = ["Adamkob12"]
description = "A crate that offers a flexible and efficient way to generate meshes from a grid of Voxels"
license = "MIT"
repository = "https://github.com/Adamkob12/bevy_meshem"
documentation = "https://docs.rs/bevy_meshem"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.15.0", default-features = false, features = [
    "bevy_render"
]}

[dev-dependencies]
bevy = { version = "0.15.0", default-features = false, features = [
    "bevy_render", 
    "bevy_text", 
    "bevy_ui", 
    "bevy_pbr",
    "bevy_winit",
    "x11",
    "bevy_window",
    "png",
    "tonemapping_luts",
    "default_font"
]}
rand = "0.8.5"